--- a/config/sync/core.entity_form_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.gallery.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.gallery.field_background_image
     - field.field.paragraph.gallery.field_images
     - field.field.paragraph.gallery.field_vih_background_color
+    - field.field.paragraph.gallery.field_vih_background_image
     - field.field.paragraph.gallery.field_vih_heading
     - field.field.paragraph.gallery.field_vih_link
     - paragraphs.paragraphs_type.gallery
@@ -20,7 +20,7 @@ third_party_settings:
     group_appearance:
       children:
         - field_background_image
-        - field_background_color
+        - field_vih_background_image
         - field_vih_background_color
       parent_name: ''
       weight: 4
@@ -38,19 +38,6 @@ targetEntityType: paragraph
 bundle: gallery
 mode: default
 content:
-  field_background_image:
-    type: entity_browser_file
-    weight: 1
-    settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
-      field_widget_edit: true
-      open: false
-      view_mode: default
-    region: content
-    third_party_settings: {  }
   field_images:
     type: entity_browser_file
     weight: 1
@@ -70,6 +57,19 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_vih_background_image:
+    type: entity_browser_file
+    weight: 2
+    settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
+    region: content
+    third_party_settings: {  }
   field_vih_heading:
     weight: 0
     settings:
