--- a/config/sync/core.entity_view_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.gallery.default.yml
@@ -3,13 +3,14 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.gallery.field_background_image
     - field.field.paragraph.gallery.field_images
     - field.field.paragraph.gallery.field_vih_background_color
+    - field.field.paragraph.gallery.field_vih_background_image
     - field.field.paragraph.gallery.field_vih_heading
     - field.field.paragraph.gallery.field_vih_link
     - paragraphs.paragraphs_type.gallery
   module:
+    - image
     - link
     - options
     - photoswipe
@@ -36,6 +37,15 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
+  field_vih_background_image:
+    weight: 4
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -56,5 +66,4 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-hidden:
-  field_background_image: true
+hidden: {  }
