--- a/config/sync/core.entity_view_display.paragraph.list_of_news_teasers.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.list_of_news_teasers.default.yml
@@ -3,12 +3,13 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.list_of_news_teasers.field_background_image
     - field.field.paragraph.list_of_news_teasers.field_tags
     - field.field.paragraph.list_of_news_teasers.field_vih_background_color
+    - field.field.paragraph.list_of_news_teasers.field_vih_background_image
     - field.field.paragraph.list_of_news_teasers.field_vih_heading
     - paragraphs.paragraphs_type.list_of_news_teasers
   module:
+    - image
     - options
 id: paragraph.list_of_news_teasers.default
 targetEntityType: paragraph
@@ -22,6 +23,15 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
+  field_vih_background_image:
+    weight: 2
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -31,5 +41,4 @@ content:
     type: string
     region: content
 hidden:
-  field_background_image: true
   field_tags: true
