--- a/config/sync/field.field.paragraph.short_course_list_.field_vih_background_image.yml
+++ b/config/sync/field.field.paragraph.short_course_list_.field_vih_background_image.yml
@@ -1,9 +1,9 @@
-uuid: 6d50e976-0ca9-4982-a530-8a727dfd05aa
+uuid: 8e6d336a-385a-4a40-bbf9-0dc25a729c78
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_image
+    - field.storage.paragraph.field_vih_background_image
     - paragraphs.paragraphs_type.short_course_list_
   module:
     - content_translation
@@ -11,11 +11,11 @@ dependencies:
 third_party_settings:
   content_translation:
     translation_sync:
-      alt: alt
-      title: title
       file: '0'
-id: paragraph.short_course_list_.field_background_image
-field_name: field_background_image
+      alt: '0'
+      title: '0'
+id: paragraph.short_course_list_.field_vih_background_image
+field_name: field_vih_background_image
 entity_type: paragraph
 bundle: short_course_list_
 label: Baggrundsbillede
@@ -30,7 +30,7 @@ settings:
   max_filesize: ''
   max_resolution: ''
   min_resolution: ''
-  alt_field: true
+  alt_field: false
   alt_field_required: true
   title_field: false
   title_field_required: false
