VI-179 paragraph user_quote field_vih_background_image settings

--- a/config/sync/field.field.paragraph.user_quote.field_vih_background_image.yml
+++ b/config/sync/field.field.paragraph.user_quote.field_vih_background_image.yml
@@ -1,9 +1,9 @@
-uuid: 6dfe6211-2414-4f3e-a7fa-1cba85df8961
+uuid: b58a8379-d7e0-4cc0-95e1-b1170ffbae73
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_image
+    - field.storage.paragraph.field_vih_background_image
     - paragraphs.paragraphs_type.user_quote
   module:
     - content_translation
@@ -11,11 +11,11 @@ dependencies:
 third_party_settings:
   content_translation:
     translation_sync:
-      alt: alt
-      title: title
       file: '0'
-id: paragraph.user_quote.field_background_image
-field_name: field_background_image
+      alt: '0'
+      title: '0'
+id: paragraph.user_quote.field_vih_background_image
+field_name: field_vih_background_image
 entity_type: paragraph
 bundle: user_quote
 label: Baggrundsbillede
@@ -30,7 +30,7 @@ settings:
   max_filesize: ''
   max_resolution: ''
   min_resolution: ''
-  alt_field: true
+  alt_field: false
   alt_field_required: true
   title_field: false
   title_field_required: false
