--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.user_quote.field_background_image
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
     - field.field.paragraph.user_quote.field_vih_author
     - field.field.paragraph.user_quote.field_vih_background_color
+    - field.field.paragraph.user_quote.field_vih_background_image
     - field.field.paragraph.user_quote.field_vih_heading
     - field.field.paragraph.user_quote.field_vih_link
     - paragraphs.paragraphs_type.user_quote
@@ -22,9 +22,9 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_background_color
         - field_vih_background_color
         - field_background_image
+        - field_vih_background_image
       parent_name: ''
       weight: 6
       format_type: tab
@@ -41,19 +41,6 @@ targetEntityType: paragraph
 bundle: user_quote
 mode: default
 content:
-  field_background_image:
-    type: entity_browser_file
-    weight: 7
-    settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
-    region: content
-    third_party_settings: {  }
   field_paragraph_person_photo:
     type: entity_browser_file
     weight: 4
@@ -89,6 +76,19 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_vih_background_image:
+    type: entity_browser_file
+    weight: 8
+    settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
+    region: content
+    third_party_settings: {  }
   field_vih_heading:
     weight: 0
     settings:
