--- a/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
@@ -3,14 +3,13 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.user_quote.field_background_image
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
     - field.field.paragraph.user_quote.field_vih_author
     - field.field.paragraph.user_quote.field_vih_background_color
+    - field.field.paragraph.user_quote.field_vih_background_image
     - field.field.paragraph.user_quote.field_vih_heading
     - field.field.paragraph.user_quote.field_vih_link
-    - image.style.vih_person_teaser
     - paragraphs.paragraphs_type.user_quote
   module:
     - image
@@ -53,6 +52,15 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
+  field_vih_background_image:
+    weight: 6
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -73,5 +81,4 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-hidden:
-  field_background_image: true
+hidden: {  }
