--- a/config/sync/core.entity_form_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.video.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.video.field_background_image
     - field.field.paragraph.video.field_description
     - field.field.paragraph.video.field_highlighted
     - field.field.paragraph.video.field_video
     - field.field.paragraph.video.field_vih_background_color
+    - field.field.paragraph.video.field_vih_background_image
     - field.field.paragraph.video.field_vih_heading
     - paragraphs.paragraphs_type.video
   module:
@@ -22,7 +22,7 @@ third_party_settings:
     group_appearance:
       children:
         - field_background_image
-        - field_background_color
+        - field_vih_background_image
         - field_vih_background_color
       parent_name: ''
       weight: 5
@@ -40,19 +40,6 @@ targetEntityType: paragraph
 bundle: video
 mode: default
 content:
-  field_background_image:
-    type: entity_browser_file
-    weight: 4
-    settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
-    third_party_settings: {  }
-    region: content
   field_description:
     weight: 3
     settings:
@@ -81,6 +68,19 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_vih_background_image:
+    type: entity_browser_file
+    weight: 5
+    settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
+    region: content
+    third_party_settings: {  }
   field_vih_heading:
     weight: 1
     settings:
