--- a/config/sync/field.field.paragraph.video.field_vih_background_image.yml
+++ b/config/sync/field.field.paragraph.video.field_vih_background_image.yml
@@ -1,20 +1,27 @@
-uuid: 4ad5e567-283f-4687-928f-ad2cd30e04bf
+uuid: aebfe1ff-1e86-4638-906b-3ea836558fc1
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_image
+    - field.storage.paragraph.field_vih_background_image
     - paragraphs.paragraphs_type.video
   module:
+    - content_translation
     - image
-id: paragraph.video.field_background_image
-field_name: field_background_image
+third_party_settings:
+  content_translation:
+    translation_sync:
+      file: '0'
+      alt: '0'
+      title: '0'
+id: paragraph.video.field_vih_background_image
+field_name: field_vih_background_image
 entity_type: paragraph
 bundle: video
 label: Baggrundsbillede
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -23,7 +30,7 @@ settings:
   max_filesize: ''
   max_resolution: ''
   min_resolution: ''
-  alt_field: true
+  alt_field: false
   alt_field_required: true
   title_field: false
   title_field_required: false
