--- a/config/sync/core.entity_form_display.paragraph.vih_class_groups_accordion.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_class_groups_accordion.default.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.vih_class_groups_accordion.field_background_image
     - field.field.paragraph.vih_class_groups_accordion.field_vih_background_color
+    - field.field.paragraph.vih_class_groups_accordion.field_vih_background_image
     - field.field.paragraph.vih_class_groups_accordion.field_vih_cg_single_class_groups
     - field.field.paragraph.vih_class_groups_accordion.field_vih_heading
     - field.field.paragraph.vih_class_groups_accordion.field_vih_link
@@ -20,9 +20,9 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_background_color
         - field_vih_background_color
         - field_background_image
+        - field_vih_background_image
       parent_name: ''
       weight: 4
       format_type: tab
@@ -39,25 +39,25 @@ targetEntityType: paragraph
 bundle: vih_class_groups_accordion
 mode: default
 content:
-  field_background_image:
-    type: entity_browser_file
-    weight: 6
-    settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
-    region: content
-    third_party_settings: {  }
   field_vih_background_color:
     weight: 5
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
+  field_vih_background_image:
+    type: entity_browser_file
+    weight: 7
+    settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
+    region: content
+    third_party_settings: {  }
   field_vih_cg_single_class_groups:
     type: entity_reference_paragraphs
     weight: 1
