--- a/config/sync/core.entity_view_display.paragraph.vih_class_groups_accordion.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_class_groups_accordion.default.yml
@@ -3,14 +3,15 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.vih_class_groups_accordion.field_background_image
     - field.field.paragraph.vih_class_groups_accordion.field_vih_background_color
+    - field.field.paragraph.vih_class_groups_accordion.field_vih_background_image
     - field.field.paragraph.vih_class_groups_accordion.field_vih_cg_single_class_groups
     - field.field.paragraph.vih_class_groups_accordion.field_vih_heading
     - field.field.paragraph.vih_class_groups_accordion.field_vih_link
     - paragraphs.paragraphs_type.vih_class_groups_accordion
   module:
     - entity_reference_revisions
+    - image
     - link
     - options
 id: paragraph.vih_class_groups_accordion.default
@@ -24,6 +25,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_vih_background_image:
+    weight: 4
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_vih_cg_single_class_groups:
     type: entity_reference_revisions_entity_view
@@ -54,5 +64,4 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-hidden:
-  field_background_image: true
+hidden: {  }
