--- a/config/sync/field.field.paragraph.vih_class_groups_accordion.field_vih_background_image.yml
+++ b/config/sync/field.field.paragraph.vih_class_groups_accordion.field_vih_background_image.yml
@@ -1,9 +1,9 @@
-uuid: 3a0b9500-35d8-4e6e-9083-124967fa97e9
+uuid: f37651b7-b03f-4367-a961-85c893df4545
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_image
+    - field.storage.paragraph.field_vih_background_image
     - paragraphs.paragraphs_type.vih_class_groups_accordion
   module:
     - content_translation
@@ -11,11 +11,11 @@ dependencies:
 third_party_settings:
   content_translation:
     translation_sync:
-      alt: alt
-      title: title
       file: '0'
-id: paragraph.vih_class_groups_accordion.field_background_image
-field_name: field_background_image
+      alt: '0'
+      title: '0'
+id: paragraph.vih_class_groups_accordion.field_vih_background_image
+field_name: field_vih_background_image
 entity_type: paragraph
 bundle: vih_class_groups_accordion
 label: Baggrundsbillede
@@ -30,7 +30,7 @@ settings:
   max_filesize: ''
   max_resolution: ''
   min_resolution: ''
-  alt_field: true
+  alt_field: false
   alt_field_required: true
   title_field: false
   title_field_required: false
