--- a/config/sync/core.entity_form_display.paragraph.vih_webform.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_webform.default.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.vih_webform.field_background_image
     - field.field.paragraph.vih_webform.field_vih_background_color
+    - field.field.paragraph.vih_webform.field_vih_background_image
     - field.field.paragraph.vih_webform.field_vih_heading
     - field.field.paragraph.vih_webform.field_vih_webform
     - paragraphs.paragraphs_type.vih_webform
@@ -18,27 +18,27 @@ targetEntityType: paragraph
 bundle: vih_webform
 mode: default
 content:
-  field_background_image:
-    type: entity_browser_file
-    weight: 3
-    settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
-    region: content
-    third_party_settings: {  }
   field_vih_background_color:
-    weight: 6
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
+  field_vih_background_image:
+    type: entity_browser_file
+    weight: 3
+    settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
+    region: content
+    third_party_settings: {  }
   field_vih_heading:
-    weight: 1
+    weight: 0
     settings:
       size: 60
       placeholder: ''
@@ -46,7 +46,7 @@ content:
     type: string_textfield
     region: content
   field_vih_webform:
-    weight: 2
+    weight: 1
     settings:
       default_data: true
     third_party_settings: {  }
