--- a/config/sync/core.entity_view_display.paragraph.vih_webform.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_webform.default.yml
@@ -3,8 +3,8 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.vih_webform.field_background_image
     - field.field.paragraph.vih_webform.field_vih_background_color
+    - field.field.paragraph.vih_webform.field_vih_background_image
     - field.field.paragraph.vih_webform.field_vih_heading
     - field.field.paragraph.vih_webform.field_vih_webform
     - image.style.paragraph_background_image
@@ -18,21 +18,21 @@ targetEntityType: paragraph
 bundle: vih_webform
 mode: default
 content:
-  field_background_image:
-    weight: 1
-    label: hidden
-    settings:
-      image_style: paragraph_background_image
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_vih_background_color:
     weight: 3
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_vih_background_image:
+    weight: 2
+    label: hidden
+    settings:
+      image_style: paragraph_background_image
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_vih_heading:
     weight: 0
