--- a/config/sync/field.field.paragraph.vih_webform.field_vih_background_image.yml
+++ b/config/sync/field.field.paragraph.vih_webform.field_vih_background_image.yml
@@ -1,9 +1,9 @@
-uuid: 9f4b641d-049f-4a7e-81bf-77233ffaa0f1
+uuid: 728c148e-c35f-4093-adbb-bbaa9febcd46
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_background_image
+    - field.storage.paragraph.field_vih_background_image
     - paragraphs.paragraphs_type.vih_webform
   module:
     - content_translation
@@ -11,11 +11,11 @@ dependencies:
 third_party_settings:
   content_translation:
     translation_sync:
-      alt: alt
-      title: title
       file: '0'
-id: paragraph.vih_webform.field_background_image
-field_name: field_background_image
+      alt: '0'
+      title: '0'
+id: paragraph.vih_webform.field_vih_background_image
+field_name: field_vih_background_image
 entity_type: paragraph
 bundle: vih_webform
 label: Baggrundsbillede
@@ -30,7 +30,7 @@ settings:
   max_filesize: ''
   max_resolution: ''
   min_resolution: ''
-  alt_field: true
+  alt_field: false
   alt_field_required: true
   title_field: false
   title_field_required: false
