--- a/config/sync/core.entity_form_display.paragraph.employee.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.employee.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.employee.field_background_image
     - field.field.paragraph.employee.field_user_type_id
     - field.field.paragraph.employee.field_vih_background_color
+    - field.field.paragraph.employee.field_vih_background_image
     - field.field.paragraph.employee.field_vih_heading
     - field.field.paragraph.employee.field_vih_link
     - paragraphs.paragraphs_type.employee
@@ -19,9 +19,9 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_background_color
         - field_vih_background_color
         - field_background_image
+        - field_vih_background_image
       parent_name: ''
       weight: 4
       format_type: tab
@@ -38,19 +38,6 @@ targetEntityType: paragraph
 bundle: employee
 mode: default
 content:
-  field_background_image:
-    weight: 4
-    settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
-      field_widget_edit: true
-      open: false
-      view_mode: default
-    third_party_settings: {  }
-    type: entity_browser_file
-    region: content
   field_user_type_id:
     weight: 1
     settings:
@@ -66,6 +53,19 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_vih_background_image:
+    type: entity_browser_file
+    weight: 5
+    settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
+    region: content
+    third_party_settings: {  }
   field_vih_heading:
     weight: 0
     settings:
