--- a/config/sync/core.entity_view_display.paragraph.social_media_embed.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.social_media_embed.default.yml
@@ -3,13 +3,14 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.social_media_embed.field_background_image
     - field.field.paragraph.social_media_embed.field_embed
     - field.field.paragraph.social_media_embed.field_vih_background_color
+    - field.field.paragraph.social_media_embed.field_vih_background_image
     - field.field.paragraph.social_media_embed.field_vih_heading
     - field.field.paragraph.social_media_embed.field_vih_link
     - paragraphs.paragraphs_type.social_media_embed
   module:
+    - image
     - link
     - options
     - url_embed
@@ -32,6 +33,15 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
+  field_vih_background_image:
+    weight: 4
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -52,5 +62,4 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-hidden:
-  field_background_image: true
+hidden: {  }
