VI-179 paragraph Text field_vih_paragraphs_body settings

--- a/config/sync/core.entity_form_display.paragraph.article.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.article.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.article.field_body
     - field.field.paragraph.article.field_vih_background_color
     - field.field.paragraph.article.field_vih_background_image
     - field.field.paragraph.article.field_vih_heading
     - field.field.paragraph.article.field_vih_link
+    - field.field.paragraph.article.field_vih_paragraphs_body
     - paragraphs.paragraphs_type.article
   module:
     - entity_browser
@@ -20,7 +20,6 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_background_image
         - field_vih_background_image
         - field_vih_background_color
       parent_name: ''
@@ -39,14 +38,6 @@ targetEntityType: paragraph
 bundle: article
 mode: default
 content:
-  field_body:
-    weight: 1
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
   field_vih_background_color:
     weight: 6
     settings: {  }
@@ -82,6 +73,14 @@ content:
     third_party_settings: {  }
     type: link_default
     region: content
+  field_vih_paragraphs_body:
+    type: text_textarea
+    weight: 2
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
 hidden:
   created: true
   status: true
