--- a/config/sync/field.storage.paragraph.field_vih_paragraphs_body.yml
+++ b/config/sync/field.storage.paragraph.field_vih_paragraphs_body.yml
@@ -1,12 +1,12 @@
-uuid: a6d8579c-196c-400a-9b23-604b20aba27f
+uuid: c6cc9dde-be4f-4616-a5d3-99ddab2c61e8
 langcode: da
 status: true
 dependencies:
   module:
     - paragraphs
     - text
-id: paragraph.field_body
-field_name: field_body
+id: paragraph.field_vih_paragraphs_body
+field_name: field_vih_paragraphs_body
 entity_type: paragraph
 type: text_long
 settings: {  }
