--- a/config/sync/field.field.paragraph.class_packages.field_vih_class_id.yml
+++ b/config/sync/field.field.paragraph.class_packages.field_vih_class_id.yml
@@ -1,13 +1,13 @@
-uuid: 8ed32039-b81a-4062-b702-76281f7c7afc
+uuid: 699c6a08-6ac3-4a1b-b387-b51d90436716
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_class_id
+    - field.storage.paragraph.field_vih_class_id
     - paragraphs.paragraphs_type.class_packages
     - taxonomy.vocabulary.vih_class_package
-id: paragraph.class_packages.field_class_id
-field_name: field_class_id
+id: paragraph.class_packages.field_vih_class_id
+field_name: field_vih_class_id
 entity_type: paragraph
 bundle: class_packages
 label: Fag
