--- a/config/sync/core.entity_form_display.paragraph.short_course_list_.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.short_course_list_.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.short_course_list_.field_course_id
     - field.field.paragraph.short_course_list_.field_vih_background_color
     - field.field.paragraph.short_course_list_.field_vih_background_image
+    - field.field.paragraph.short_course_list_.field_vih_course_id
     - field.field.paragraph.short_course_list_.field_vih_heading
     - field.field.paragraph.short_course_list_.field_vih_link
     - paragraphs.paragraphs_type.short_course_list_
@@ -19,7 +19,6 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_background_image
         - field_vih_background_image
         - field_vih_background_color
       parent_name: ''
@@ -38,15 +37,6 @@ targetEntityType: paragraph
 bundle: short_course_list_
 mode: default
 content:
-  field_course_id:
-    weight: 1
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
   field_vih_background_color:
     weight: 6
     settings: {  }
@@ -65,6 +55,15 @@ content:
       field_widget_edit: true
       view_mode: default
     region: content
+    third_party_settings: {  }
+  field_vih_course_id:
+    type: entity_reference_autocomplete
+    weight: 2
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   field_vih_heading:
     weight: 0
