--- a/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
@@ -3,9 +3,9 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.short_course_list_.field_course_id
     - field.field.paragraph.short_course_list_.field_vih_background_color
     - field.field.paragraph.short_course_list_.field_vih_background_image
+    - field.field.paragraph.short_course_list_.field_vih_course_id
     - field.field.paragraph.short_course_list_.field_vih_heading
     - field.field.paragraph.short_course_list_.field_vih_link
     - paragraphs.paragraphs_type.short_course_list_
@@ -55,4 +55,4 @@ content:
     type: link
     region: content
 hidden:
-  field_course_id: true
+  field_vih_course_id: true
