--- a/config/sync/core.entity_view_display.paragraph.long_course_list_.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.long_course_list_.default.yml
@@ -3,9 +3,9 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.long_course_list_.field_course_id
     - field.field.paragraph.long_course_list_.field_vih_background_color
     - field.field.paragraph.long_course_list_.field_vih_background_image
+    - field.field.paragraph.long_course_list_.field_vih_course_id
     - field.field.paragraph.long_course_list_.field_vih_heading
     - field.field.paragraph.long_course_list_.field_vih_link
     - paragraphs.paragraphs_type.long_course_list_
@@ -34,6 +34,14 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_vih_course_id:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -54,5 +62,4 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-hidden:
-  field_course_id: true
+hidden: {  }
