--- a/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
@@ -3,11 +3,11 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.vih_teacher_class_description.field_description
     - field.field.paragraph.vih_teacher_class_description.field_paragraph_user
     - field.field.paragraph.vih_teacher_class_description.field_photo
     - field.field.paragraph.vih_teacher_class_description.field_vih_background_color
     - field.field.paragraph.vih_teacher_class_description.field_vih_background_image
+    - field.field.paragraph.vih_teacher_class_description.field_vih_description
     - field.field.paragraph.vih_teacher_class_description.field_vih_heading
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
@@ -19,13 +19,6 @@ targetEntityType: paragraph
 bundle: vih_teacher_class_description
 mode: default
 content:
-  field_description:
-    weight: 2
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
   field_photo:
     weight: 0
     label: hidden
@@ -36,14 +29,14 @@ content:
     type: image
     region: content
   field_vih_background_color:
-    weight: 3
+    weight: 4
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_vih_background_image:
-    weight: 4
+    weight: 5
     label: above
     settings:
       image_style: ''
@@ -51,6 +44,13 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_vih_description:
+    type: text_default
+    weight: 3
+    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_vih_heading:
     weight: 1
     label: hidden
