--- a/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.embedded.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.embedded.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.embedded
-    - field.field.paragraph.vih_teacher_class_description.field_description
     - field.field.paragraph.vih_teacher_class_description.field_paragraph_user
     - field.field.paragraph.vih_teacher_class_description.field_photo
     - field.field.paragraph.vih_teacher_class_description.field_vih_background_color
     - field.field.paragraph.vih_teacher_class_description.field_vih_background_image
+    - field.field.paragraph.vih_teacher_class_description.field_vih_description
     - field.field.paragraph.vih_teacher_class_description.field_vih_heading
     - image.style.vih_person_teaser
     - paragraphs.paragraphs_type.vih_teacher_class_description
@@ -20,13 +20,6 @@ targetEntityType: paragraph
 bundle: vih_teacher_class_description
 mode: embedded
 content:
-  field_description:
-    weight: 2
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
   field_photo:
     weight: 0
     label: hidden
@@ -36,6 +29,13 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_vih_description:
+    type: text_default
+    weight: 2
+    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_paragraph_user: true
   field_vih_background_color: true
