--- a/config/sync/core.entity_form_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.video.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.video.field_description
     - field.field.paragraph.video.field_highlighted
     - field.field.paragraph.video.field_video
     - field.field.paragraph.video.field_vih_background_color
     - field.field.paragraph.video.field_vih_background_image
+    - field.field.paragraph.video.field_vih_description
     - field.field.paragraph.video.field_vih_heading
     - paragraphs.paragraphs_type.video
   module:
@@ -21,7 +21,6 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_background_image
         - field_vih_background_image
         - field_vih_background_color
       parent_name: ''
@@ -40,16 +39,8 @@ targetEntityType: paragraph
 bundle: video
 mode: default
 content:
-  field_description:
-    weight: 3
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
   field_highlighted:
-    weight: 2
+    weight: 1
     settings:
       size: 60
       placeholder: ''
@@ -81,8 +72,16 @@ content:
       view_mode: default
     region: content
     third_party_settings: {  }
+  field_vih_description:
+    weight: 3
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   field_vih_heading:
-    weight: 1
+    weight: 0
     settings:
       size: 60
       placeholder: ''
