--- a/config/sync/field.field.paragraph.file.field_vih_description.yml
+++ b/config/sync/field.field.paragraph.file.field_vih_description.yml
@@ -1,14 +1,14 @@
-uuid: 73664c75-31ef-4f97-96c4-9da532e1242f
+uuid: 5e7218ae-cfc8-4600-bfdb-54cd1d426140
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_description
+    - field.storage.paragraph.field_vih_description
     - paragraphs.paragraphs_type.file
   module:
     - text
-id: paragraph.file.field_description
-field_name: field_description
+id: paragraph.file.field_vih_description
+field_name: field_vih_description
 entity_type: paragraph
 bundle: file
 label: Beskrivelse
