--- a/config/sync/core.entity_form_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.file.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.file.field_description
     - field.field.paragraph.file.field_vih_background_color
     - field.field.paragraph.file.field_vih_background_image
+    - field.field.paragraph.file.field_vih_description
     - field.field.paragraph.file.field_vih_heading
     - field.field.paragraph.file.field_vih_link
     - field.field.paragraph.file.file
@@ -22,7 +22,6 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_background_image
         - field_vih_background_image
         - field_vih_background_color
       parent_name: ''
@@ -41,14 +40,6 @@ targetEntityType: paragraph
 bundle: file
 mode: default
 content:
-  field_description:
-    weight: 1
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
   field_vih_background_color:
     weight: 7
     settings: {  }
@@ -68,6 +59,14 @@ content:
       view_mode: default
     region: content
     third_party_settings: {  }
+  field_vih_description:
+    weight: 2
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   field_vih_heading:
     weight: 0
     settings:
@@ -86,7 +85,7 @@ content:
     region: content
   file:
     type: file_generic
-    weight: 2
+    weight: 3
     region: content
     settings:
       progress_indicator: throbber
