--- a/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.1_column_action_centered.field_description
     - field.field.paragraph.1_column_action_centered.field_vih_background_color
     - field.field.paragraph.1_column_action_centered.field_vih_background_image
+    - field.field.paragraph.1_column_action_centered.field_vih_description
     - field.field.paragraph.1_column_action_centered.field_vih_heading
     - field.field.paragraph.1_column_action_centered.field_vih_link
     - paragraphs.paragraphs_type.1_column_action_centered
@@ -20,7 +21,6 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_background_image
         - field_vih_background_image
         - field_vih_background_color
       parent_name: ''
@@ -40,7 +40,7 @@ bundle: 1_column_action_centered
 mode: default
 content:
   field_description:
-    weight: 3
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -66,6 +66,14 @@ content:
       selection_mode: selection_append
     region: content
     third_party_settings: {  }
+  field_vih_description:
+    weight: 3
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   field_vih_heading:
     type: string_textfield
     weight: 0
@@ -75,7 +83,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_vih_link:
-    weight: 2
+    weight: 1
     settings:
       placeholder_url: ''
       placeholder_title: ''
