--- a/config/sync/field.storage.paragraph.field_vih_embed.yml
+++ b/config/sync/field.storage.paragraph.field_vih_embed.yml
@@ -1,12 +1,12 @@
-uuid: d8a196de-7aff-4c60-b948-f33b0dae14df
+uuid: 5df35858-80d7-4d86-8d0d-d025d3dde910
 langcode: da
 status: true
 dependencies:
   module:
     - link
     - paragraphs
-id: paragraph.field_embed
-field_name: field_embed
+id: paragraph.field_vih_embed
+field_name: field_vih_embed
 entity_type: paragraph
 type: link
 settings: {  }
