--- a/config/sync/core.entity_form_display.paragraph.social_media_embed.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.social_media_embed.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.social_media_embed.field_embed
     - field.field.paragraph.social_media_embed.field_vih_background_color
     - field.field.paragraph.social_media_embed.field_vih_background_image
+    - field.field.paragraph.social_media_embed.field_vih_embed
     - field.field.paragraph.social_media_embed.field_vih_heading
     - field.field.paragraph.social_media_embed.field_vih_link
     - paragraphs.paragraphs_type.social_media_embed
@@ -20,7 +20,6 @@ third_party_settings:
     group_appearance:
       children:
         - field_vih_background_color
-        - field_background_image
         - field_vih_background_image
       parent_name: ''
       weight: 4
@@ -38,14 +37,6 @@ targetEntityType: paragraph
 bundle: social_media_embed
 mode: default
 content:
-  field_embed:
-    weight: 1
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-    type: link_default
-    region: content
   field_vih_background_color:
     weight: 3
     settings: {  }
@@ -64,6 +55,14 @@ content:
       field_widget_edit: true
       view_mode: default
     region: content
+    third_party_settings: {  }
+  field_vih_embed:
+    type: link_default
+    weight: 2
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
     third_party_settings: {  }
   field_vih_heading:
     weight: 0
