--- a/config/sync/core.entity_form_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.gallery.default.yml
@@ -4,10 +4,10 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.gallery.field_images
     - field.field.paragraph.gallery.field_vih_background_color
     - field.field.paragraph.gallery.field_vih_background_image
     - field.field.paragraph.gallery.field_vih_heading
+    - field.field.paragraph.gallery.field_vih_images
     - field.field.paragraph.gallery.field_vih_link
     - paragraphs.paragraphs_type.gallery
   module:
@@ -19,7 +19,6 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_background_image
         - field_vih_background_image
         - field_vih_background_color
       parent_name: ''
@@ -38,19 +37,6 @@ targetEntityType: paragraph
 bundle: gallery
 mode: default
 content:
-  field_images:
-    type: entity_browser_file
-    weight: 1
-    settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
-      field_widget_edit: true
-      open: false
-      view_mode: default
-    region: content
-    third_party_settings: {  }
   field_vih_background_color:
     weight: 3
     settings: {  }
@@ -78,6 +64,19 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_vih_images:
+    type: entity_browser_file
+    weight: 2
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
   field_vih_link:
     weight: 3
     settings:
