--- a/config/sync/core.entity_view_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.gallery.default.yml
@@ -3,10 +3,10 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.gallery.field_images
     - field.field.paragraph.gallery.field_vih_background_color
     - field.field.paragraph.gallery.field_vih_background_image
     - field.field.paragraph.gallery.field_vih_heading
+    - field.field.paragraph.gallery.field_vih_images
     - field.field.paragraph.gallery.field_vih_link
     - paragraphs.paragraphs_type.gallery
   module:
@@ -19,26 +19,15 @@ targetEntityType: paragraph
 bundle: gallery
 mode: default
 content:
-  field_images:
-    weight: 1
-    label: hidden
-    settings:
-      photoswipe_node_style: gallery_thumbnail
-      photoswipe_image_style: ''
-      photoswipe_caption: title
-      photoswipe_view_mode: default
-    third_party_settings: {  }
-    type: photoswipe_field_formatter
-    region: content
   field_vih_background_color:
-    weight: 3
+    weight: 4
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_vih_background_image:
-    weight: 4
+    weight: 5
     label: above
     settings:
       image_style: ''
@@ -54,8 +43,19 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_vih_link:
+  field_vih_images:
+    type: photoswipe_field_formatter
     weight: 2
+    region: content
+    label: hidden
+    settings:
+      photoswipe_node_style: gallery_thumbnail
+      photoswipe_image_style: ''
+      photoswipe_caption: title
+      photoswipe_view_mode: default
+    third_party_settings: {  }
+  field_vih_link:
+    weight: 3
     label: hidden
     settings:
       trim_length: null
