--- a/config/sync/core.entity_form_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.video.default.yml
@@ -4,12 +4,12 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.video.field_highlighted
     - field.field.paragraph.video.field_video
     - field.field.paragraph.video.field_vih_background_color
     - field.field.paragraph.video.field_vih_background_image
     - field.field.paragraph.video.field_vih_description
     - field.field.paragraph.video.field_vih_heading
+    - field.field.paragraph.video.field_vih_highlighted
     - paragraphs.paragraphs_type.video
   module:
     - entity_browser
@@ -39,14 +39,6 @@ targetEntityType: paragraph
 bundle: video
 mode: default
 content:
-  field_highlighted:
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textfield
-    region: content
   field_video:
     weight: 4
     settings: {  }
@@ -88,6 +80,14 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_vih_highlighted:
+    type: text_textfield
+    weight: 2
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
 hidden:
   created: true
   status: true
